--- a/_posts/2017-03-09-Ausfall.md
+++ b/_posts/2017-03-09-Ausfall.md
@@ -10,5 +10,5 @@ fa: "exclamation-triangle"
 |--------------------|---|----------------------------------------------------------------------|
 | Systems:           |   | All systems assigned to AS61303                                                              |
 | Start:             |   | 2017-03-09 at 8:46 am Europe/Berlin                          | 
-| Description:       |   | Due to a DDoS attack above mentioned services are currently noticing less to major packet loss. |
+| Description:       |   | Due to a DDoS attack the above mentioned services are currently noticing less to major packet loss. |
 | Affected:          |   | All customers using IPs of AS61303                                                |
