Create Ende 2017-06-20 + update Zeitformat

--- a/_posts/2017-06-20-Update.md
+++ b/_posts/2017-06-20-Update.md
@@ -2,13 +2,13 @@
 layout: post
 title: "Outage/Interruption [UPDATE]"
 date: 2017-06-20
-time: "21:40 am Europe/Berlin"
+time: "9:40 pm Europe/Berlin"
 fa: "clock-o"
 ---
 
 |                    |   |                                                                      |
 |--------------------|---|----------------------------------------------------------------------|
 | Systems:           |   | CEPH                                                                 |
-| Start:             |   | 2017-06-20 at 19:45 am Europe/Berlin                                 |
+| Start:             |   | 2017-06-20 at 7:45 pm Europe/Berlin                                  |
 | Description:       |   | There were problems with CEPH storage. The problem is solved and we are making rework |
 | Affected:          |   | All customers with shared storage and virtual machines.              |
