--- a/_posts/2017-08-09-Ausfall.md
+++ b/_posts/2017-08-09-Ausfall.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "DDos attack on AS12337[INFO]"
+title: "DDos attack on AS12337[ALERT]"
 date: 2017-08-09
 time: "06:08 pm Europe/Berlin"
 fa: "exclamation-triangle"
