--- a/_posts/2018-06-20-1529490164-outage-start.md
+++ b/_posts/2018-06-20-1529490164-outage-start.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Issues with Hardware"
+title: "Issues with virtual machine disk-images"
 date: 2018-06-20
 date: 2018-06-20
 time: "12:22 Europe/Berlin"
@@ -9,7 +9,7 @@ fa: "exclamation-triangle"
 
 |                   |   |                                                                      |
 |-------------------|---|----------------------------------------------------------------------|
-| Systems:          |   | Issues with Hardware|
+| Systems:          |   | Issues with virtual machine disk-images|
 | Start:            |   | 2018-06-20 at 08:00 Europe/Berlin |
-| Description:      |   | We are experiencing interruptions on our Hardware systems. We are looking into the cause of the issues. We will post an update as soon as possible. |
+| Description:      |   | We are experiencing interruptions on some virtual machines, which is caused by readonly-filesystems . We are looking into the cause of the issues and we will post an update as soon as possible. |
 | Affected:         |   | All Customers with Virtual Machines |
