[nms status] solving read only issue

--- a/_posts/2018-06-20-1529498894-outage-recovery.md
+++ b/_posts/2018-06-20-1529498894-outage-recovery.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "SOLVED - Issues with Hardware"
+title: "SOLVED Issues with virtual machine disk-images"
 date: 2018-06-20
 date: 2018-06-20
 time: "14:48 Europe/Berlin"
@@ -9,8 +9,8 @@ fa: "check"
 
 |                   |   |                                                                      |
 |-------------------|---|----------------------------------------------------------------------|
-| Systems:          |   | SOLVED - Issues with Hardware|
+| Systems:          |   | SOLVED Issues with virtual machine disk-images|
 | Start:            |   | 2018-06-20 at 08:00 Europe/Berlin |
 | Recovery:	      |   | 2018-06-20 at 14:00 Europe/Berlin |
-| Description:      |   | We have implemented a fix for the interruptions on our Hardware. All systems are operational again. |
+| Description:      |   | The interruptions we experienced earlier on some virtual-machines systems have been fixed. Some disk images were mounted as read only, so we had to reboot the affected machines. All systems are fully operational again. |
 | Affected:         |   | All Customers with Virtual Machines |
