--- a/_posts/2018-08-14-1534261075-info.md
+++ b/_posts/2018-08-14-1534261075-info.md
@@ -14,7 +14,4 @@ fa: "calendar"
 | Start:            |   | 2018-08-29 at 01:00 Europe/Berlin |
 | End:              |   | Planned for 2018-08-29 at 05:00  Europe/Berlin |
 | Description:      |   | During the above period we are going to perform maintenance work on our Hardware systems. Longer interruptions are expected. |
-| Add. Info:        |   | Due to maintenance work on the NFS service your share will be migrated to another server. This includes stopping and starting the share, which will cause an interruption of the service. The duration of the interruption depends on the actual workload, the size of the share and on the client's connection settings and should be between 5 and 120 seconds.
-
-The interruption can occur twice during the maintenance period.
- |
+| Add. Info:        |   | Due to maintenance work on the NFS service your share will be migrated to another server. This includes stopping and starting the share, which will cause an interruption of the service. The duration of the interruption depends on the actual workload, the size of the share and on the client's connection settings and should be between 5 and 120 seconds. The interruption can occur twice during the maintenance period. |
