--- a/_posts/2019-01-14-1547462596-announcement.md
+++ b/_posts/2019-01-14-1547462596-announcement.md
@@ -9,7 +9,7 @@ fa: "calendar"
 
 |                   |   |                                                                      |
 |-------------------|---|----------------------------------------------------------------------|
-| Systems:          |   | General Announcement: Limited Service | Company Event 2019-02-15|
+| Systems:          |   | General Announcement: Limited Service - Company Event 2019-02-15|
 | Start:            |   | 2019-02-15 at 11:30 Europe/Berlin |
 | End:              |   | 2019-02-15 at 18:00 Europe/Berlin |
 | Description:      |   | NETWAYS is hosting a company event starting 2019-02-15 11:30 AM CET to 2019-02-15 06:00 PM CET. We apologize for the inconvenience you might experience during that time period because we are not available. This includes contact requests via telephone or mail (service@netways.de and support@netways.de). We will take care of your requests after that. In urgent cases you are able to call our 24x7-Support, if ordered. |
